# GraphicsDemo

./: .gitignore  LICENSE  README.md  cmake-vs2012.cmd  cmake-vs2013.cmd  deps-vs2013.7z  extract-tools.cmd  run-cmake-vs2012.cmd  run-cmake-vs2013.cmd  tools.7z
data/gui/layouts/: RenderingSettings.wnd
data/gui/shaders/dx11/: text.gsh.hlsl  text.psh.hlsl  text.vsh.hlsl
data/media/: sphere.FBX  teapot.FBX
data/media/cat/: cat.FBX  cat.geom  cat.material  cat_diff.dds  cat_furlen.dds  cat_norm.dds  cat_spec.dds  fur.dds
data/media/cube/: bricks10.ktx  bricks10_normal.ktx  cube.FBX  cube.geom  cube.material  cube_diff.dds  cube_normal.dds
data/media/house/: house.FBX  house.geom  house.material  house_diffuse.dds  house_normal.dds  house_spec.dds
data/media/models/: sphere.geom  teapot.geom
data/media/spaceship/: spaceship.FBX  spaceship.geom  spaceship.material  spaceship2.FBX  spaceship_diff.dds  spaceship_diff.ktx  spaceship_normal.dds  spaceship_normal.ktx  spaceship_specular.dds  spaceship_specular.ktx
data/media/textures/: full_specular.dds  fullspecular.dds  grass.dds  grass_bump.dds  nightsky2.dds  no_bump.dds  no_specular.dds  nobump.dds  nospecular.dds
data/media/windmill/: windmill.FBX  windmill.geom  windmill.material  windmill_diffuse.dds  windmill_normal.dds  windmill_spec.dds
data/shaders/dx11/: shader.psh  shader.vsh
data/shaders/dx11/deferredshading/: common.h  deferredshading.gsh  deferredshading.gsh.hlsl  deferredshading.psh  deferredshading.psh.hlsl  deferredshading_msaa.psh  deferredshading_msaa.psh.hlsl  dscommon.h  dscommon.h.hlsl  gbuffer.psh  gbuffer.psh.hlsl  gbuffer.vsh  gbuffer.vsh.hlsl  pscommon.h  skybox.gsh.hlsl  skybox.psh  skybox.psh.hlsl
data/shaders/dx11/fur/: common.h.hlsl  fur.psh.hlsl  furfins.gsh.hlsl  furfins.psh.hlsl  furfins.vsh.hlsl  furshells.psh.hlsl  furshells.vsh.hlsl  solid.psh.hlsl  solid.vsh.hlsl
data/shaders/dx11/lpp/: common.h.hlsl  gbuffer.psh.hlsl  gbuffer.vsh.hlsl  scene.psh.hlsl  (+5 more)
demo/: CMakeLists.txt
demo/framework-dx11/: CMakeLists.txt  application.cpp  application.h  autoreleasepool.h  blendstage.cpp  blendstage.h  camera.cpp  camera.h  depthstencilstage.cpp  depthstencilstage.h  destroyable.cpp  destroyable.h  framework.h  freeCamera.cpp  freeCamera.h  geometry3D.cpp  geometry3D.h  gpuprogram.cpp  gpuprogram.h  guirenderer.cpp  guirenderer.h  lightManager.cpp  lightManager.h  line3D.cpp  line3D.h  materialmanager.cpp  materialmanager.h  outputd3d11.cpp  outputd3d11.h  pipelinestage.cpp  pipelinestage.h  rasterizerstage.cpp  rasterizerstage.h  renderTarget.cpp  renderTarget.h  resourceview.cpp  resourceview.h  sampler.cpp  sampler.h  standardGpuPrograms.cpp  (+18 more)
demo/framework-dx11/dds/: CMakeLists.txt  DDSTextureLoader.cpp  ScreenGrab.cpp  ScreenGrab.h
demo/framework-gl/: CMakeLists.txt  application.cpp  application.h  atomicCounter.cpp  atomicCounter.h  camera.cpp  camera.h  destroyable.cpp  destroyable.h  framework.h  freeCamera.cpp  freeCamera.h  geometry3D.cpp  geometry3D.h  gpuprogram.cpp  gpuprogram.h  lightManager.cpp  lightManager.h  line3D.cpp  line3D.h  materialmanager.cpp  materialmanager.h  openglcontext.cpp  openglcontext.h  pipelinestate.cpp  pipelinestate.h  renderTarget.cpp  renderTarget.h  renderingSettings.cpp  renderingSettings.h  standardGpuPrograms.cpp  standardGpuPrograms.h  stdafx.h  storageBuffer.cpp  storageBuffer.h  template.cpp  template.h  texture.cpp  texture.h  uifactory.cpp  (+7 more)
demo/framework-gl/GL/: CMakeLists.txt
demo/geomlib/: CMakeLists.txt  data.cpp  data.h  fbxloader.cpp  fbxloader.h  geometry.cpp  geometry.h  geometrygenerator.cpp  geometrygenerator.h  geometryloader.cpp  geometryloader.h  geometrysaver.cpp  geometrysaver.h  geomformat.h  geomloader.cpp  geomloader.h  geomsaver.cpp  geomsaver.h  planegenerator.cpp  planegenerator.h  stdafx.cpp  stdafx.h  terraingenerator.cpp  terraingenerator.h
demo/guilib/: CMakeLists.txt  fontmanager.cpp  fontmanager.h  label.cpp  label.h  overlay.cpp  overlay.h  stdafx.h  uimanager.cpp  uimanager.h  uistructs.h  widget.cpp  widget.h
demo/json/: CMakeLists.txt
demo/mathlib/: CMakeLists.txt  _matrix33.h  _matrix33_sse.h  _matrix44.h  _matrix44_sse.h  _vector2.h  _vector3.h  _vector3_sse.h  _vector4.h  _vector4_sse.h  bbox.h  envelopecurve.h  eulerangles.h  line.h  matrix.h  ncamera2.h  nmath.cpp  nmath.h  noise.h  pknorm.h  plane.h  polar.h  quaternion.h  rectangle.h  sphere.h  transform33.h  transform44.h  triangle.h  vector.h  vector3envelopecurve.h
demo/ptg/: CMakeLists.txt  readme.txt
demo/ptg/helsing/: HeightMap.cpp  HeightMap.hpp  hmath.hpp
demo/ptg/helsing/math/: Mat4.hpp  Vec2.hpp  Vec4.hpp  hmath_misc.hpp
demo/ptg/ptg/: Continuous2DSignal.cpp  Continuous2DSignal.hpp  Continuous2DSignalTerrain.cpp  Continuous2DSignalTerrain.hpp  DiamondSquareTerrain.cpp  DiamondSquareTerrain.hpp  FractionalBrownianMotion.cpp  FractionalBrownianMotion.hpp  GaussianBlurTerrain.cpp  GaussianBlurTerrain.hpp  HelsingSquareTerrain.cpp  HelsingSquareTerrain.hpp  HybridMultiFractal.cpp  HybridMultiFractal.hpp  MidpointDisplacementTerrain.cpp  MidpointDisplacementTerrain.hpp  PerlinNoise.cpp  PerlinNoise.hpp  RidgedMultiFractal.cpp  RidgedMultiFractal.hpp  Seedable.cpp  Terrain.hpp  ThermalErosionTerrain.cpp  ThermalErosionTerrain.hpp  ValueNoise.cpp  ValueNoise.hpp
demo/src/: CMakeLists.txt  main.cpp  main_dx11.cpp  main_ogl.cpp
demo/src/DeferredShading/: CMakeLists.txt  main_dx11.cpp  main_ogl.cpp
demo/src/Fur/: CMakeLists.txt  main_dx11.cpp  main_ogl.cpp
demo/src/LightPrePass/: CMakeLists.txt  main_dx11.cpp
demo/src/OIT/: CMakeLists.txt  main_dx11.cpp  main_ogl.cpp
demo/src/PSSM/: CMakeLists.txt  main_dx11.cpp  main_ogl.cpp
demo/src/PostProcessing/: CMakeLists.txt  main_ogl.cpp
demo/src/template/: CMakeLists.txt  main_dx11.cpp  main_ogl.cpp
demo/tests/: CMakeLists.txt  mathlibtests.cpp  utilstests.cpp
demo/tools/: CMakeLists.txt  geomconv.cpp
demo/utils/: CMakeLists.txt  fpscounter.cpp  fpscounter.h  inputkeys.h  logger.cpp  logger.h  profiler.cpp  profiler.h  stdafx.h  timer.cpp  timer.h  utils.cpp  utils.h
(+75 files in other folders)
